@@ -77,6 +77,12 @@ Release 0.19.0 - Unreleased
    HBASE-1003  If cell exceeds TTL but not VERSIONs, will not be removed during
                major compaction
    HBASE-1005  Regex and string comparison operators for ColumnValueFilter
+   HBASE-910   Scanner misses columns / rows when the scanner is obtained
+               durring a memcache flush
+   HBASE-1009  Master stuck in loop wanting to assign but regions are closing
+   HBASE-1016  Fix example in javadoc overvie
+   HBASE-1021  hbase metrics FileContext not working
+   HBASE-1023  Check global flusher
       
   IMPROVEMENTS
    HBASE-901   Add a limit to key length, check key and value length on client side
@@ -129,7 +135,12 @@ Release 0.19.0 - Unreleased
                the deleted cell
    HBASE-675   Report correct server hosting a table split for assignment to
                for MR Jobs
-        
+   HBASE-927   We don't recover if HRS hosting -ROOT-/.META. goes down
+   HBASE-1013  Add debugging around commit log cleanup
+   HBASE-972   Update hbase trunk to use released hadoop 0.19.0
+   HBASE-1022  Add storefile index size to hbase metrics
+   HBASE-1026  Tests in mapred are failing
+ 
   NEW FEATURES
    HBASE-875   Use MurmurHash instead of JenkinsHash [in bloomfilters]
                (Andrzej Bialecki via Stack)
